--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,27 +6,12 @@
     "configurations": [
         
         {
-            "name": "Python: Remote Attach",
-            "type": "python",
-            "request": "attach",
-            "connect": {
-                "host": "localhost",
-                "port": 5678
-            },
-            "pathMappings": [
-                {
-                    "localRoot": "${workspaceFolder}",
-                    "remoteRoot": "."
-                }
-            ]
-        },
-        {
             "name": "Python: Current File",
             "type": "python",
             "request": "launch",
-            "program": "${file}",
-            "console": "internalConsole",
-            "args": ["--music-dir", "MSUIC"]
+            "program": "${workspaceFolder}/spotifylesystem-sync.py",
+            "console": "integratedTerminal",
+            "justMyCode": true
         }
     ]
 }
